--- a/Sesi 8-checkpoint.ipynb
+++ b/Sesi 8-checkpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b66b3501",
+   "id": "cfe71ae2",
    "metadata": {},
    "source": [
     "Sesi 8"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2767eaeb",
+   "id": "d0d1db34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4e472eb7",
+   "id": "a7d9e7b2",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a37fab0",
+   "id": "b4b0fa91",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8989dc55",
+   "id": "ebe6445b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c5fca8c8",
+   "id": "19a4190a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "079da702",
+   "id": "a34087bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ba901978",
+   "id": "fd32c69b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9d10b40a",
+   "id": "0e870b0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9d5b6a46",
+   "id": "ca5396fd",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "13f85837",
+   "id": "ccfea5a3",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9f7bcaf6",
+   "id": "fe676f3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ffdfc394",
+   "id": "1b5ea113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1645ccff",
+   "id": "2287c226",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "df6e47c8",
+   "id": "c957875c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "19bc37a8",
+   "id": "a1e7d8bd",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e00cf377",
+   "id": "48557719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7ef70def",
+   "id": "7074a773",
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4c191d64",
+   "id": "45061601",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e9ec5562",
+   "id": "a2887b81",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a86faee7",
+   "id": "c98525a0",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "69118f08",
+   "id": "864c27cb",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1ef838c3",
+   "id": "ef6ce261",
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e7fd0b8d",
+   "id": "f1d1688c",
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1311be6b",
+   "id": "8a75239c",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3a93e705",
+   "id": "0b2e56f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ae8bdd62",
+   "id": "c996865c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "2c344dd0",
+   "id": "0bee04c4",
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "98385824",
+   "id": "631c6f13",
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "fe0d98f8",
+   "id": "e1179cff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0ba53bbf",
+   "id": "a13cb4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ce99d207",
+   "id": "a4275595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7d65d561",
+   "id": "bac04c50",
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "14abcf45",
+   "id": "14fc5e79",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ecebe9e5",
+   "id": "2b8b9beb",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "24a3a046",
+   "id": "f5b8cfc7",
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "10d113a1",
+   "id": "345b92f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c4d92c22",
+   "id": "55c2b563",
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "7b20d81d",
+   "id": "b6eb75a1",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2bbeb384",
+   "id": "2497bf69",
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "a666ec73",
+   "id": "fa255cef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "6409b9b1",
+   "id": "ece61e6f",
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1768,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "3c2efcb2",
+   "id": "5e794535",
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1797,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "6f11c1f3",
+   "id": "624ece71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1807,7 +1807,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "9eb60ef1",
+   "id": "d00afef8",
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1825,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "1ffb76e6",
+   "id": "a3c1a3a3",
    "metadata": {},
    "outputs": [
     {
@@ -1852,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "2d055b3f",
+   "id": "68d8ce0a",
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1883,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "3a2becc9",
+   "id": "ffb1c723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1896,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "a76b8844",
+   "id": "f89acb00",
    "metadata": {},
    "outputs": [
     {
@@ -1975,7 +1975,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "434b28cf",
+   "id": "6bd26cce",
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +1997,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "0c553098",
+   "id": "814e61cc",
    "metadata": {},
    "outputs": [
     {
@@ -2018,7 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "5543c8ae",
+   "id": "f9b14b35",
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2040,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "7fd19952",
+   "id": "75e7eff8",
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "039da8fa",
+   "id": "45afc04a",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "f6917f3b",
+   "id": "8d8fb861",
    "metadata": {},
    "outputs": [
     {
@@ -2150,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "c741c91b",
+   "id": "559b239d",
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2188,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "da18e88d",
+   "id": "df38c752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2202,7 +2202,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "4faad538",
+   "id": "1401e321",
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2240,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "db7dfff0",
+   "id": "79f777f5",
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2272,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "562087c7",
+   "id": "8e0c9378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2282,7 +2282,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "2d0fbf4e",
+   "id": "178b594f",
    "metadata": {},
    "outputs": [
     {
@@ -2306,7 +2306,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "50409f80",
+   "id": "fb58e436",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "42f93ea3",
+   "id": "5f182f1d",
    "metadata": {},
    "outputs": [
     {
@@ -2340,7 +2340,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "13d63175",
+   "id": "9563c176",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2350,7 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "2ce7a378",
+   "id": "57fd7834",
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2374,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "fdb5f87f",
+   "id": "32c58cee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2384,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "2df04dc0",
+   "id": "53022bb8",
    "metadata": {},
    "outputs": [
     {
@@ -2408,7 +2408,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "8c37fff5",
+   "id": "64c587a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2418,7 +2418,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "284167d3",
+   "id": "6ecc2af6",
    "metadata": {},
    "outputs": [
     {
@@ -2442,7 +2442,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "4e5420b1",
+   "id": "d5660ebe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2452,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "aa7a8c07",
+   "id": "f41d40c2",
    "metadata": {},
    "outputs": [
     {
@@ -2476,7 +2476,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "60bc7b4d",
+   "id": "ae202ec2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2486,7 +2486,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "727fd4b4",
+   "id": "24c30a6f",
    "metadata": {},
    "outputs": [
     {
@@ -2652,7 +2652,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "748ea7dd",
+   "id": "ef0013c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2663,7 +2663,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "b0e3ab06",
+   "id": "adef68eb",
    "metadata": {},
    "outputs": [
     {
@@ -2684,7 +2684,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "fd00949f",
+   "id": "bacd65d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2695,7 +2695,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "5ce9e648",
+   "id": "19ef8242",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2705,7 +2705,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "8cdd37f0",
+   "id": "55e0ac0b",
    "metadata": {},
    "outputs": [
     {
@@ -2729,7 +2729,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "6e881674",
+   "id": "01efb057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2739,7 +2739,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "3222c3ab",
+   "id": "f9a7d040",
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2761,7 @@
     "    incidents.add_child(\n",
     "        folium.CircleMarker(\n",
     "            [lat, lng],\n",
-    "            radius=5, # define how big you want the circle markers to be\n",
+    "            radius=5,\n",
     "            color='yellow',\n",
     "            fill=True,\n",
     "            fill_color='blue',\n",
@@ -2775,7 +2775,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "10576046",
+   "id": "0f9d044b",
    "metadata": {},
    "outputs": [
     {
@@ -2820,7 +2820,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "0b395dc0",
+   "id": "1e623c95",
    "metadata": {},
    "outputs": [
     {
@@ -2857,7 +2857,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "748d4646",
+   "id": "03c4c485",
    "metadata": {},
    "outputs": [
     {
@@ -2894,7 +2894,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "ad4a9da2",
+   "id": "7b893a07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2907,7 +2907,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "6b736a6b",
+   "id": "52516f2d",
    "metadata": {},
    "outputs": [
     {
@@ -3124,7 +3124,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "416b8c75",
+   "id": "4a1e2c05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3138,7 +3138,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "4b17dcce",
+   "id": "4a650dd2",
    "metadata": {},
    "outputs": [
     {
@@ -3156,7 +3156,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "2d769b9b",
+   "id": "491fe33b",
    "metadata": {},
    "outputs": [
     {
@@ -3366,7 +3366,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "5ff638be",
+   "id": "ef33d1d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3376,7 +3376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "645aaa50",
+   "id": "591746b7",
    "metadata": {},
    "outputs": [],
    "source": []
